# GiuGame

./: CMakeLists.txt  CMakeLists.txt.user.07cbead  GiuGameController.cpp  GiuGameController.h  Images.qrc  assets.qrc  gamecontroller.cpp  gamecontroller.h  giugameconfig.cpp  giugameconfig.h  giugamecontroller.cpp  levels.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  worldloader.cpp  worldloader.h
Components/: animationcomponent.cpp  animationcomponent.h  autoplaycomponent.cpp  autoplaycomponent.h  pathtracercomponent.cpp  pathtracercomponent.h
Engine/: GameInput.h  GameObject.cpp  GameObject.h  IdGenerator.h  compositeinputmanager.cpp  compositeinputmanager.h  gamecontroller.cpp  gamecontroller.h  gameinput.h  gameloader.h  gameobject.cpp  gameobject.h  gameview.h  idgenerator.cpp  idgenerator.h  inputmanager.cpp  inputmanager.h
Engine/Components/: GameObjectComponent.h  collidercomponent.cpp  collidercomponent.h  collisionmanagercomponent.cpp  collisionmanagercomponent.h  gameobjectcomponent.cpp  gameobjectcomponent.h
GameObjects/: GameObject.cpp  GameObject.h  IdGenerator.cpp  benemyobject.cpp  benemyobject.h  doorobject.cpp  doorobject.h  enemyobject.cpp  enemyobject.h  giugameobject.cpp  giugameobject.h  healthpackobject.cpp  healthpackobject.h  levelobject.cpp  levelobject.h  pathobject.cpp  pathobject.h  penemyobject.cpp  penemyobject.h  playerobject.cpp  playerobject.h  tileobject.cpp  tileobject.h
InputManagers/: inputmanager.cpp  inputmanager.h  inputmanager2d.cpp  inputmanager2d.h  inputmanagertext.cpp  inputmanagertext.h
Views/: animateditemview.cpp  gameview.cpp  gameview.h  giugameconfig.h  itemview.cpp  itemview.h  itemviewfactory.cpp  itemviewfactory.h  spriteloader.cpp  spriteloader.h
Views/2d/: GameView2d.cpp  GameView2d.h  animateditemview.h  benemyview2d.cpp  benemyview2d.h  characterview2d.h  doorview2d.cpp  doorview2d.h  enemyview2d.cpp  enemyview2d.h  gameview2d.cpp  gameview2d.h  healthpackview2d.cpp  healthpackview2d.h  itemview2d.h  pathview2d.cpp  pathview2d.h  penemyview2d.cpp  penemyview2d.h  playerview2d.cpp  playerview2d.h  tileview2d.cpp  tileview2d.h
Views/3d/: gameview3d.cpp  gameview3d.h  polygonview3d.cpp  polygonview3d.h
Views/overlay/: gameviewoverlay.cpp  gameviewoverlay.h
Views/text/: GameViewText.cpp  GameViewText.h  benemyviewtext.cpp  benemyviewtext.h  doorviewtext.cpp  doorviewtext.h  enemyviewtext.cpp  enemyviewtext.h  gameviewtext.cpp  gameviewtext.h  healthpackviewtext.cpp  healthpackviewtext.h  itemviewtext.h  penemyviewtext.cpp  penemyviewtext.h  playerviewtext.cpp  playerviewtext.h  tileviewtext.cpp  tileviewtext.h
include/: pathfinder_class.h
levels/1/: config.txt
levels/2/: config.txt
levels/3/: config.txt
lib/: moc_world.cpp  world.lib
